# Relay_Board

./: .gitignore  CMakeLists.txt  MyInstaller.nsi  app.rc
include/: controlpanel.hpp  drawingcanva.hpp  interpreter.hpp  mainframe.hpp  relayapp.hpp  serialrelay.hpp
src/: controlpanel.cpp  drawingcanva.cpp  interpreter.cpp  main.cpp  mainframe.cpp  relayapp.cpp  serialrelay.cpp
